---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "\nfn go(dict, key) {\n    \"something\"\n    |> insert(dict, key, _)\n}\n\nfn insert(dict, key, value) {\n    value\n}\n"
---
module rec my.``mod``

let private insert<'c, 'a, 'b> (dict: 'a) (key: 'b) (value: 'c) = begin
    value
end
let private go<'d, 'e> (dict: 'd) (key: 'e) = begin
    begin
        let _pipe = "something"
        ((fun(_capture: string) -> insert dict key _capture) _pipe)
    end
end
